# Algorithm-Sim

./: CMakeLists.txt
inc/: gui.hpp  simulation.hpp
lib/src/imgui/: CMakeLists.txt
src/: gui.cpp  main.cpp  simulation.cpp
